gitops/platform-instances/gitea/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    openshift.io/cluster-monitoring: "true"
