gitops/platform-instances/gitea/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
  type: ClusterIP
