gitops/platform-instances/gitea/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-wave: "40"
spec:
  to:
    kind: Service
    name: gitea
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
